# uvc_webcam_access

./: CMakeLists.txt  README.md  UvcH264.h  VideoCapture.cpp  VideoCapture.h  libv4l2-hw.c  libv4l2-hw.h  main.c  main.cpp  usbinfo.c  usbinfo.h  video_ext.h
